--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ bevy = { version = "0.12", default-features = false, features = [
     "x11",
 ] }
 bevy_rapier3d = "0.23"
+rand = "0.8"
 
 # Enable optimizations for dependencies in debug mode
 [profile.dev.package."*"]
